--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@slack/client": "^3.9.0",
     "dotenv": "^4.0.0",
+    "http": "0.0.0",
+    "request": "^2.81.0",
     "sqlite3": "^3.1.8"
   }
 }
