--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.15.4",
     "http": "0.0.0",
     "sqlite3": "^3.1.8"
+  },
+  "engines": {
+    "node": "6.11.2",
+    "npm": "5.3.0"
   }
 }
