--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Joel",
   "license": "ISC",
   "dependencies": {
-    
+    "dotenv": "^4.0.0",
+    "express": "^4.15.4",
+    "http": "0.0.0",
+    "sqlite3": "^3.1.8"
   },
   "engines": {
-    "node": "6.11.2",
-    "npm": "5.3.0"
+    "node": "6.11.2"
   }
 }
