--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Joel",
   "license": "ISC",
   "dependencies": {
-    
+    "dotenv": "^4.0.0",
+    "express": "^4.15.4",
+    "http": "0.0.0",
+    "sqlite3": "^3.1.8"
   },
   "engines": {
     "node": "6.11.2"
