--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joel",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "http": "0.0.0",
